--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 crossorigin="anonymous"></script>
                 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <script src="https://startbootstrap.github.io/startbootstrap-grayscale/"></script>
         <style>
             body {
                 font: 20px Montserrat, sans-serif;
