--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             p {font-size: 16px;}
             .margin {margin-bottom: 45px;}
             .bg-1 { 
-                background-color: #a56f29;
+                background-image: url('https://whvn.cc/42roy9');
+                background-size: cover;
+                background-position: center;
                 color: #f0dfcc;
             }
             .bg-2 { 
@@ -85,7 +87,7 @@
               </div>
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
-                  <li><a href=#>1</a></li>
+                  <li><a href="front-end/html.html">front-end/html.html</a></li>
                   <li><a href=#>2</a></li>
                   <li><a href=#>3</a></li>
                 </ul>
@@ -96,93 +98,25 @@
         <!-- Introduction -->
         <div class="container-fluid bg-1 text-center">
             <h1 class="margin">COIL Team 6 Project</h1>
-            <h3>Team 6 Web Page</h3>
-            <img src="portrait.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Portrait" width="350" height="350">
+            <h3>Team 6 Home Page</h3>
+            <img src="portrait1.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Portrait1" width="350" height="350">
+            <img src="portrait2.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Portrait2" width="350" height="350">
+            <img src="portrait3.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Portrait3" width="350" height="350">
+            <img src="portrait4.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Portrait4" width="350" height="350">
         </div>
 
 
         <div class="container-fluid bg-3 text-center">    
-            <h3 class="margin">Fun Stuff</h3><br>
+            <h3 class="margin"></h3><br>
             <div class="row">
-            <div class="col-sm-4">
-                <p>Time</p>
-                <canvas id="analog-clock" width="150" height="150" style="background-color:#f0dfcc"></canvas>
-                <div id="mydiv"
-                        onclick="document.getElementById('mydiv').innerHTML= 'Clicked time: ' + Date()">
-                        Click here for current time</div>
-                    <div id="digit-clock"></div>
-                <script>
-                    var canvas = document.getElementById("analog-clock");
-                        var ctx = canvas.getContext("2d");
-                        var radius = canvas.height / 2;
-                        ctx.translate(radius, radius);
-                        radius = radius * 0.90;
-                        setInterval(drawClock, 1000);
-
-                        function drawClock(){
-                            drawFace(ctx, radius);
-                            drawNumbers(ctx, radius);
-                            drawTime(ctx, radius);
-                        }
-                    function displayTime() {
-                        document.getElementById('digit-clock').innerHTML = "Current time: " + new Date();
-                    }
-                    setInterval(displayTime, 500);
-                </script>
-            </div>
             <div class="col-sm-4"> 
-                <p>Trivia</p>
-                <form action="echo.php" method="POST">
-                    <input class="button round" type="button" value="Trivia?" onclick="triviaAPIfetch()">
-                    <div id="trivia"></div>
-                    <div id="triviaAnswers"></div>
-                    <div id="guessContainer" style="display: none;">
-                        Your Guess: <input name="guess" onkeyup="console.log('You have pressed a key')" id="guess">
-                        <input class="button round" type="button" value="Guess?" onclick="triviaGuess()">
-                    </div>
-                    <div id="triviaAnswer"></div>
+                <input class="button round" type="button" value="Trivia?" href="front-end/html.html">
                 </form>
-                <script>
-                    let correctAnswer = "";
-                    let answers = [];
-                    async function triviaAPIfetch(){
-                        const triviaAPI_res = await
-                        fetch("https://opentdb.com/api.php?amount=1&difficulty=easy");
-                        const result = await triviaAPI_res.json();
-                        $("#trivia").html(result.results[0].question)
-                        //Get correct answers and wrong answers put into array, mix then print
-                        correctAnswer = result.results[0].correct_answer;
-                        incorrectAnswers = result.results[0].incorrect_answers;
-                        answers = [correctAnswer].concat(incorrectAnswers);
-                        shuffleArray(answers);
-                        $("#trivia").html(result.results[0].question)
-                        $("#triviaAnswers").html(""); 
-                        answers.forEach(answer => {
-                        $("#triviaAnswers").append(`<div style="margin: 10px 0;">${answer}</div>`);
-                        });
-                        document.getElementById("guessContainer").style.display = "block";
-                    }
-                    function shuffleArray(array) {
-                        for (let i = array.length - 1; i > 0; i--) {
-                            const j = Math.floor(Math.random() * (i + 1));
-                            [array[i], array[j]] = [array[j], array[i]]; // Swap elements
-                        }
-                    }
-                    function triviaGuess(){
-                        var input = document.getElementById("guess").value;
-                        if (input.toLowerCase() === correctAnswer.toLowerCase()){
-                            $("#triviaAnswer").html("Correct!")
-                        } else {
-                            $("#triviaAnswer").html("Sorry, The correct answer was: " + correctAnswer)
-                        }
-                    }
-                </script>
             </div>
         </div>
 
         <!-- Footer -->
         <footer class="container-fluid bg-4 text-center">
-        <p>Bootstrap Theme Made By <a href="https://www.w3schools.com">www.w3schools.com</a></p> 
-        </footer>l
+        </footer>
     </body>
 </html>
