--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             p {font-size: 16px;}
             .margin {margin-bottom: 45px;}
             .bg-1 { 
-                background-image: url('https://whvn.cc/42roy9');
+                background-image: url('https://w.wallhaven.cc/full/42/wallhaven-42roy9.jpg');
                 background-size: cover;
                 background-position: center;
                 color: #f0dfcc;
@@ -87,7 +87,7 @@
               </div>
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
-                  <li><a href="front-end/html.html">front-end/html.html</a></li>
+                  <li><a href="front-end/index.html">Chat Bot</a></li>
                   <li><a href=#>2</a></li>
                   <li><a href=#>3</a></li>
                 </ul>
@@ -110,7 +110,7 @@
             <h3 class="margin"></h3><br>
             <div class="row">
             <div class="col-sm-4"> 
-                <input class="button round" type="button" value="Trivia?" href="front-end/html.html">
+                <input class="button round" type="button" value="Chat Bot" href="front-end/index.html">
                 </form>
             </div>
         </div>
