chat bot page base layout

--- a/index.html
+++ b/index.html
@@ -11,65 +11,7 @@
                 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <script src="https://startbootstrap.github.io/startbootstrap-grayscale/"></script>
-        <style>
-            body {
-                font: 20px Montserrat, sans-serif;
-                line-height: 1.8;
-                color: #a56f29;
-            }
-            p {font-size: 16px;}
-            .margin {margin-bottom: 45px;}
-            .bg-1 { 
-                background-image: url('https://w.wallhaven.cc/full/42/wallhaven-42roy9.jpg');
-                background-size: cover;
-                background-position: center;
-                color: #f0dfcc;
-            }
-            .bg-2 { 
-                background-color: #a56f29;
-                color: #f0dfcc;
-            }
-            .bg-3 { 
-                background-color: #f0dfcc;
-                color: #a56f29;
-            }
-            .bg-4 { 
-                background-color: #271808;
-                color: #f0dfcc;
-            }
-            .container-fluid {
-                padding-top: 70px;
-                padding-bottom: 70px;
-            }
-            .navbar {
-                padding-top: 15px;
-                padding-bottom: 15px;
-                border: 0;
-                border-radius: 0;
-                margin-bottom: 0;
-                font-size: 12px;
-                letter-spacing: 5px;
-            }
-            .navbar-nav  li a:hover {
-                color: #a56f29 !important;
-            }
-            .button {
-                background-color: #a56f29;
-                border: none;
-                color: white;
-                padding: 5px;
-                text-align: center;
-                text-decoration: none;
-                display: inline-block;
-                font-size: 12px;
-                margin: 4px 2px;
-                cursor: pointer;
-            }
-            .round {border-radius: 8px;}
-            #trivia {background-color: #f0dfcc;}
-            #triviaAnswers {background-color: #f0dfcc;}
-            #triviaAnswer {background-color: #f0dfcc;}
-        </style>
+        <link rel="stylesheet" href="/stylesheet.css">
     </head>
 
     <body>
@@ -87,7 +29,7 @@
               </div>
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
-                  <li><a href="front-end/index.html">Chat Bot</a></li>
+                  <li><a href="views/chatbox.html">Chat Bot</a></li>
                   <li><a href=#>2</a></li>
                   <li><a href=#>3</a></li>
                 </ul>
