--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>                        
                 </button>
-                <a class="navbar-brand" href=#>Team 6</a>
+                <a class="navbar-brand" href=#>Home</a>
               </div>
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
@@ -48,7 +48,7 @@
         </div>
 
 
-        <div class="container-fluid bg-3 text-center">    
+        <div class="container-fluid bg-2 text-center">    
             <h3 class="margin"></h3><br>
             <div class="row">
             <div class="col-sm-4"> 
@@ -59,6 +59,16 @@
 
         <!-- Footer -->
         <footer class="container-fluid bg-4 text-center">
+            <div class="col-sm-4"> 
+            <h3>Description</h3>
+                <p>
+                    Our project was to create a chatbot that would take in genres or movies that you like and use a database to give you a similar movie with information about its rating and description.
+                </p>
+            </div>
+            <div class="col-sm-4"> 
+            <h3>Movie Recommendation Chat Bot</h3>
+            <input class="button round" type="button" value="Chat Bot" href="front-end/index.html">
+            </div>           
         </footer>
     </body>
 </html>
