Name Cards index.html

--- a/index.html
+++ b/index.html
@@ -41,10 +41,34 @@
         <div class="container-fluid bg-1 text-center">
             <h1 class="margin">COIL Team 6 Project</h1>
             <h3>Team 6 Home Page</h3>
-            <img src="portrait1.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Portrait1" width="350" height="350">
-            <img src="portrait2.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Portrait2" width="350" height="350">
-            <img src="portrait3.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Portrait3" width="350" height="350">
-            <img src="portrait4.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Portrait4" width="350" height="350">
+            <div class="col-sm-6 col-md-4">
+                        <div class="movie-card">
+                            <h4>Erich Jaster</h4>
+                            <img src="portrait1.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Portrait1" width="350" height="350">
+                            <p>jastere1@udayton.edu</p>
+                        </div>
+                      </div>
+            <div class="col-sm-6 col-md-4">
+                        <div class="movie-card">
+                            <h4>Thien Tran</h4>
+                            <img src="portrait2.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Portrait2" width="350" height="350">
+                            <p>trant11@udayton.edu</p>
+                        </div>
+                      </div>
+            <div class="col-sm-6 col-md-4">
+                        <div class="movie-card">
+                            <h4>Tien Trinh</h4>
+                            <img src="portrait3.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Portrait3" width="350" height="350">
+                            <p>ITITIU21328@student.hcmiu.edu.vn</p>
+                        </div>
+                      </div>
+            <div class="col-sm-6 col-md-4">
+                        <div class="movie-card">
+                            <h4>Name</h4>
+                            <img src="portrait4.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Portrait4" width="350" height="350">
+                            <p>example text</p>
+                        </div>
+                      </div>
         </div>
 
 
