--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
         <div class="container-fluid bg-2 text-center">    
             <h3 class="margin"></h3><br>
+            <div class="row">
         </div>
 
         <!-- Footer -->
