--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                       </div>
             <div class="col-sm-6 col-md-3">
                         <div class="picture-card">
-                            <h4>Name</h4>
+                            <h4>Phu Tran</h4>
                             <img src="portrait4.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Portrait4" width="250" height="250">
                             <p>example text</p>
                         </div>
@@ -86,7 +86,7 @@
             </div>
             <div class="col-sm-4"> 
             <h3>Movie Recommendation Chat Bot</h3>
-            <input class="button round" type="button" value="Chat Bot" href="front-end/index.html">
+            <input class="button round" type="button" value="Chat Bot" href="views/chatbox.html">
             </div>           
         </footer>
     </body>
