--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="col-sm-6 col-md-3">
                         <div class="picture-card">
                             <h4>Thien Tran</h4>
-                            <img src="portrait2.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Portrait2" width="250" height="250">
+                            <img src="/assets/Tom.png" class="img-responsive img-circle margin" style="display:inline" alt="Tom" width="250" height="250">
                             <p>trant11@udayton.edu</p>
                         </div>
                       </div>
