--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
                   <li><a href="views/chatbox.html">Movie Reccomendation</a></li>
-                  <li><a href=#>Popular Movies</a></li>
-                  <li><a href=#>3</a></li>
+                  <li><a href="views/popular.html">Popular Movies</a></li>
                 </ul>
               </div>
             </div>
