--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- Introduction -->
         <div class="container-fluid bg-1 text-center">
             <h1 class="margin">COIL Team 6 Project</h1>
-            <h3>Team 6 Home Page</h3>
+            <h3>Group Members</h3>
             <div class="col-sm-6 col-md-3">
                         <div class="picture-card">
                             <h4>Erich Jaster</h4>
@@ -77,18 +77,18 @@
 
         <!-- Footer -->
         <footer class="container-fluid bg-4 text-center">
-            <div class="col-sm-4"> 
-            <h3>Example: </h3>
-            </div>
-            <div class="col-sm-4"> 
-            <h3>Description</h3>
+            <div class="col-sm-2"> 
+            <h3>Project Description:</h3>
                 <p>
-                    Our project was to create a chatbot that would take in genres or movies that you like and use a database to give you a similar movie with information about its rating and description.
+                    Our Project is a content-based Movie Recommendation System built using Python, Pandas, Scikit-learn, and served with a lightweight FastAPI web framework.
+                    We start with the TMDB 5000 dataset, which includes two CSV files movies.csv and ratings.csv. After merging these datasets on the movie title, we extract and clean key fields such as overview, genres, cast, crew, keywords, budget, runtime, and popularity.
                 </p>
             </div>
-            <div class="col-sm-4"> 
-            <h3>Movie Recommendation Chat Bot</h3>
-            <input class="button round" type="button" value="Chat Bot" href="views/chatbox.html">
+            <div class="col-sm-2"> 
+            <h3>Movie Recommender</h3>
+            <input class="button round" type="button" value="Movie Recomendation" href="views/chatbox.html">
+            <h3>Popular Movies</h3>
+            <input class="button round" type="button" value="Popular Movies href="views/popular.html">
             </div>  
         </footer>
     </body>
