--- a/index.html
+++ b/index.html
@@ -77,18 +77,18 @@
 
         <!-- Footer -->
         <footer class="container-fluid bg-4 text-center">
-            <div class="col-sm-2"> 
+            <div class="col-sm-6"> 
             <h3>Project Description:</h3>
                 <p>
                     Our Project is a content-based Movie Recommendation System built using Python, Pandas, Scikit-learn, and served with a lightweight FastAPI web framework.
                     We start with the TMDB 5000 dataset, which includes two CSV files movies.csv and ratings.csv. After merging these datasets on the movie title, we extract and clean key fields such as overview, genres, cast, crew, keywords, budget, runtime, and popularity.
                 </p>
             </div>
-            <div class="col-sm-2"> 
+            <div class="col-sm-6"> 
             <h3>Movie Recommender</h3>
             <input class="button round" type="button" value="Movie Recomendation" href="views/chatbox.html">
             <h3>Popular Movies</h3>
-            <input class="button round" type="button" value="Popular Movies href="views/popular.html">
+            <input class="button round" type="button" value="Popular Movies" href="views/popular.html">
             </div>  
         </footer>
     </body>
