--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
             </div>
             <div class="col-sm-6"> 
             <h3>Movie Recommender</h3>
-            <input class="button round" type="button" value="Movie Recomendation" href="views/chatbox.html">
+            <li><a href="views/chatbox.html">Movie Reccomendation</a></li>
             <h3>Popular Movies</h3>
-            <input class="button round" type="button" value="Popular Movies" href="views/popular.html">
+            <li><a href="views/popular.html">Popular Movies</a></li>
             </div>  
         </footer>
     </body>
