add video index.html

--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
             <li><a href="views/chatbox.html">Movie Reccomendation</a></li>
             <h3>Popular Movies</h3>
             <li><a href="views/popular.html">Popular Movies</a></li>
+            <video width="320" height="240">
+                <source src="">
+            </video>
             </div>  
         </footer>
     </body>
