--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <h3>Popular Movies</h3>
             <li><a href="views/popular.html">Popular Movies</a></li>
             <video width="320" height="240">
-                <source src="">
+                <source src="/assets/Web Project Demo.mp4">
             </video>
             </div>  
         </footer>
