--- a/index.html
+++ b/index.html
@@ -85,13 +85,18 @@
                 </p>
             </div>
             <div class="col-sm-6"> 
-            <h3>Movie Recommender</h3>
-            <li><a href="views/chatbox.html">Movie Reccomendation</a></li>
-            <h3>Popular Movies</h3>
-            <li><a href="views/popular.html">Popular Movies</a></li>
-            <video width="320" height="240">
-                <source src="/assets/Web Project Demo.mp4">
-            </video>
+                <h3>Movie Recommender</h3>
+                <li><a href="views/chatbox.html">Movie Reccomendation</a></li>
+                <h3>Popular Movies</h3>
+                <li><a href="views/popular.html">Popular Movies</a></li>
+                <iframe width="100%" height="315"
+                    src="/assets/Web Project Demo.mp4"
+                    title="Project Demo"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
+                    style="border-radius:8px; margin-bottom:20px;">
+                </iframe>
             </div>  
         </footer>
     </body>
